# orion

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agent_registry/: __init__.py  registry.py
agents/: __init__.py  agent_messaging.py  agent_router.py  analysis_agent.py  base_agent.py  code_agent.py  report_agent.py  research_agent.py
api/: main.py
api/routes/: __init__.py  task_routes.py  workflow_routes.py
api/schemas/: __init__.py  task_schemas.py  workflow_schemas.py
core/: config.py  dependencies.py  logging.py
db/: __init__.py  models.py  postgres.py  redis_client.py
llm/: __init__.py  gemini_client.py  llm_interface.py
memory/: __init__.py  context_manager.py  long_term_memory.py  short_term_memory.py
messaging/: __init__.py  rabbitmq_client.py  task_consumer.py  task_publisher.py
planner/: planner_agent.py
runtime/: __init__.py  concurrency_manager.py  task_dispatcher.py
tools/: __init__.py  base_tool.py  file_tool.py  sql_tool.py  tool_registry.py  vector_search_tool.py  web_search_tool.py
workers/: __init__.py  analysis_worker.py  code_worker.py  report_worker.py  research_worker.py  worker_manager.py
workflow/: __init__.py  executor.py  graph_builder.py  retry_manager.py  visualizer.py  workflow_state.py
